Modify fxml and create new files